@@ -1,31 +1,20 @@
 apply plugin: "scala"
 apply plugin: "idea"
+apply plugin: "maven"
 
-version = "0.1-SNAPSHOT"
+version = "0.1"
 group = "org.expecty"
-
-ext {
-  useKepler = false
-  keplerDir = file("kepler")
-}
 
 repositories {
   mavenCentral()
-  if (!useKepler) {
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-  }
+  maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
 
 dependencies {
-  if (useKepler) {
-    scalaTools fileTree(dir: "kepler/dists/latest/lib")
-    compile files("kepler/dists/latest/lib/scala-compiler.jar")
-    compile files("kepler/dists/latest/lib/scala-library.jar")
-  } else {
-    scalaTools "org.scala-lang:scala-compiler:2.10.0-M3"
-    compile "org.scala-lang:scala-compiler:2.10.0-M3"
-    compile "org.scala-lang:scala-library:2.10.0-M3"
-  }
+  scalaTools "org.scala-lang:scala-compiler:2.10.0-M3"
+
+  compile "org.scala-lang:scala-compiler:2.10.0-M3"
+  compile "org.scala-lang:scala-library:2.10.0-M3"
 
   testCompile "junit:junit:4.10"
 }
@@ -33,9 +22,7 @@ dependencies {
 compileScala {  
   scalaCompileOptions.with {
     additionalParameters = ["-Xmacros"]
-    if (useKepler) {
-      additionalParameters += ["-Ymacro-debug", "-Ymacro-copypaste"]
-    }
+    //additionalParameters += ["-Ymacro-debug", "-Ymacro-copypaste"]
   }
 }
 
@@ -53,6 +40,15 @@ compileTestScala {
   }
 }
 
+uploadArchives {
+  repositories.mavenDeployer {
+    repository url: "file:///${projectDir}/m2repo"
+    pom.whenConfigured {
+      it.dependencies.find { it.artifactId == "scala-compiler" }.scope = "provided"
+    }
+  }
+}
+
 idea {
   project {
     jdkName = "1.6"
@@ -61,25 +57,6 @@ idea {
 
 test {
   testLogging.showStandardStreams = true
-}
-
-if (useKepler) {
-  task buildKepler {
-    inputs.property "kepler version", {
-      def ps = "git describe".execute(null, keplerDir)
-      ps.inputStream.text
-    }
-    outputs.dir "$keplerDir/dists/latest/lib"
-    doLast {
-      exec {
-        environment "ANT_OPTS", "-Xms512M -Xmx2048M -Xss1M -XX:MaxPermSize=128M"
-        workingDir = keplerDir
-        executable = "ant"
-        args "fastdist"
-      }
-    }
-  }
-  compileScala.dependsOn(buildKepler)
 }
 
 task wrapper(type: Wrapper) {
